--- a/views/3reasons.hbs
+++ b/views/3reasons.hbs
@@ -11,8 +11,8 @@
             <h1 class="zona">3 Reasons to Become a VegFest Member</h1>
           </div>
 
-          <p>In case early entry to New England VegFest — that's Sunday, April
-            29 at 11 AM this year! — isn't enough to sell you on becoming a
+          <p>In case early entry to New England VegFest<!-- — that's Sunday, April
+            29 at 11 AM this year! — --> isn't enough to sell you on becoming a
             member, here are three more reasons to become a VegFest member: </p>
 
           <h2>1. To change Worcester for the better. </h2>
