--- a/views/partials/membership-perks.hbs
+++ b/views/partials/membership-perks.hbs
@@ -7,7 +7,7 @@
         <ul>
         <li><strong>New England VegFest</strong>
           <em>Early Admission</em><br>
-          <span class="perks-small-print">Early admission. Skip the lines! <em>April 29, 2018 in Worcester, MA</em></span>
+          <span class="perks-small-print">Early admission. Skip the lines! <!--<em>April 29, 2018 in Worcester, MA</em>--></span>
         </li>
         <li><strong>Loving Hut (Chandler Street)</strong>
           <em>10% off every day</em> <br>
