add norway me benefit

--- a/views/partials/membership-perks.hbs
+++ b/views/partials/membership-perks.hbs
@@ -17,6 +17,10 @@
           <em>10% off</em> <br>
           <span class="perks-small-print">Worcester, MA</span>
         </li>
+        <li><strong>Taste of Eden Vegan Cafe</strong>
+          <em>10% off</em> <br>
+          <span class="perks-small-print">Norway, ME</span>
+        </li>
         <li><strong>The Vegan Nest</strong>
           <em>10% off every day</em> <br>
           <span class="perks-small-print">Worcester, MA</span>
