Add new $10/month option

--- a/views/partials/signup-form.hbs
+++ b/views/partials/signup-form.hbs
@@ -45,6 +45,9 @@
       <input type="radio" name="subscriptionPlan" id="membership-06" value="membership-06" data-amount="6"> <label for="membership-06">$6</label>
     </div>
     <div class="col-sm-2 mx-auto">
+      <input type="radio" name="subscriptionPlan" id="plan_EcdyYnI6uTihEv" value="plan_EcdyYnI6uTihEv" data-amount="10"> <label for="plan_EcdyYnI6uTihEv">$10</label>
+    </div>
+    <div class="col-sm-2 mx-auto">
       <input type="radio" name="subscriptionPlan" id="membership-14" value="membership-14" data-amount="14" checked> <label for="membership-14">$14</label>
     </div>
     <div class="col-sm-2 mx-auto">
