--- a/views/stats.hbs
+++ b/views/stats.hbs
@@ -21,6 +21,7 @@
             <br>
             <ul>
               <li>{{monthly06}} members @ $6/mo</li>
+              <li>{{monthly10}} members @ $10/mo</li>
               <li>{{monthly14}} members @ $14/mo</li>
               <li>{{monthly25}} members @ $25/mo</li>
               <li>{{monthly50}} members @ $50/mo </li>
