add green plate

--- a/views/partials/membership-perks.hbs
+++ b/views/partials/membership-perks.hbs
@@ -44,6 +44,10 @@
           <em>Free upgrade from medium to large on Thursdays</em> <br>
           <span class="perks-small-print">Worcester, MA</span>
         </li>
+        <li><strong>The Green Plate</strong>
+          <em>10% off every day</em> <br>
+          <span class="perks-small-print">Whitinsville, MA</span>
+        </li>
         <li><strong>Pet Rock Fest Festival</strong>
           <em>$2 off admission</em> <br>
           <span class="perks-small-print">Grafton, MA</span>
