--- a/views/partials/membership-perks.hbs
+++ b/views/partials/membership-perks.hbs
@@ -52,6 +52,10 @@
           <em>$2 off admission</em> <br>
           <span class="perks-small-print">Grafton, MA</span>
         </li>
+        <li><strong>UPrise Foods</strong>
+          <em>15% off online orders</em> <br>
+          <span class="perks-small-print">uprisefoods.com</span>
+        </li>
         </ul>
         <p class="text-center"><em>More discounts & perks added all the time. Sign up today and we'll keep you in the loop about any new benefits!</em></p>
     </div>
